tests/org.eclipse.mylyn.docs.intent.parser.test/dataTests/intentDocuments/errors/multiple_affectation.intent
Document {
	Chapter {
		Section Merge {
			Merging models.
			
			@M umlStorageDefinition 
				Resource umlResource {
					URI = "platform:/resource/rmTest/generated/uml.ecore";
					contentType = "ECore";
					content += uml
				}
			M@

		}
	}
}
